--- a/index.html
+++ b/index.html
@@ -4,13 +4,52 @@
     <meta charset="UTF-8">
     <title>Fedko, Bogdan Resume</title>
 </head>
+
+<style>
+
+    body {
+        background-color: #0B0C10;
+        color: #C5C6C7
+    }
+    h1, h2 {
+        color: #45A29E;
+        text-align: center;
+    }
+
+    #contact,a {
+        font-size: 0.8rem;
+        color: yellow;
+    }
+
+    h2 {
+        text-transform: uppercase;
+    }
+
+    footer {
+        text-align: center;
+        background-color: black;
+        color: aliceblue;
+    }
+
+    h3 {
+        color: #66FCF1;
+    }
+
+    
+
+
+
+</style>
 <body>
-    <h1>Resume</h1>
-    <h2>Fedko, Bogdan</h2>
-    <hr/>
+    <h1>Bogdan Fedko</h1>
+    <h2>I.T. End User support Technician</h2> 
+    <h2 id="contact">Contact: <br/> 
+    Email:<a href="mailto:bfbogdan@gmail.com"> BFbogdan@gmail.com</a><br/>
+    Phone:<a href="tel:+9416157413"> +1 941-615-7413</a>
+</h2><hr/>
 
     <h3>Summary:</h3>
-    Seeking an opportunity for employment, that utilizes an interest in the networks security as well as web design that would show my greater ability in the advancement of today’s technology and superior to the communication of public interest and helpful hand to starting businesses.
+    IT professional with international experience that is seeking long term employment with an organization that promotes career development and continuing education for its employees. 
     
     <h3>Education:</h3>
         <ul>
@@ -29,32 +68,63 @@
             <li>June 2021 – Current<br/>
             Alorica Inc. , Site IT Technician II / End User Support<br/>
             396 Rinehart Rd<br/>
-            Lake Mary, FL 32746</li><br/>
+            Lake Mary, FL 32746</li>
+            <ul>
+                <li>Support users with account/system issues</li>
+                <li>Utilize Active Directory for managing systems, user accounts</li>
+                <li>Performing Deployments via SCCM for software and updates</li>
+                <li>Monitoring sign-in logs and error logs via Azure Active Directory and resolving MFA issues</li>
+                <li>Troubleshooting logs for system blocks/access requirements per client</li>
+                <li>Troubleshooting/updating/servicing Macbook's for clients</li>
+                <li>Working with Enterprise Endpoint team, Server and Network team for client image/VLAN/access setups, troubleshooting and resolving issues.</li>
+                <li>Travel locally and internationally - site stand-up, tear down, support. </li>
+            </ul>
         <p></p>
             <li>August 2019 – June 2021<br/>
             Alorica Inc. , Dell ProSupport Tech Representative<br/>
             396 Rinehart Rd<br/>
-            Lake Mary, FL 32746</li><br/>
+            Lake Mary, FL 32746</li>
+            <ul>
+                <li>Support client users and systems</li>
+                <li>Utilize, support and educate about Dell applications/use of [Dell] apps</li>
+                <li>utilize Salesforce to setup/follow-up/resolve cases</li>
+            </ul>
         <p></p>
             <li>October 2018 – July 2019<br/>
             Sykes Enterprises/Corporation, Tier 3/RRD Supervisor/Customer Support<br/>
             1398 S Woodland Blvd<br/>
-            DeLand, FL 32720</li><br/>
+            DeLand, FL 32720</li>
+            <ul>
+                <li>Tier3 travel consierge - book, cancel, change, investigate travel issues/contigencies</li>
+                <li>Investigate, report, resolve travel issues - customer, Air Line or Agent fault</li>
+                <li>Educate existing and new agents for proper use of Amadeus ticketing system.</li>
+                <li>SME - Amadeus</li>
+            </ul>
     <p></p>
             <li>Tech Boot-Up [Self-Operated]<br/>
             Mobile Phone repair, Computer/Laptop repair, Mac repair, Console repair<br/>
             <a href="https://www.facebook.com/TechBootUp1/">Facebook Page</a></li>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
         </ul>
 
     <h3>Skills:</h3>
         <ol>
-            <li>
-            Languages:</li>
+        <div class="Language">
+            <li>Languages:</li>
             <ul>
                 <li>English (Read, Write, Speak)</li>
                 <li>Russian (Read, Write, Speak)</li>
                 <li>Ukrainian (Read, Comprehend)</li>
             </ul>
+        </div>
+        <div class="Skills">
             <li>Abilities:</li>
             <ul>
                 <li>Windows 10 Operations (Basic support to complex support)</li>
@@ -91,6 +161,7 @@
                     <li>Macbook (Air/Pro) Imaging/ Troubleshooting</li>
                     <li>International travel - site decommission/build-up</li>
             </ul>
+        </div>
         </ol>
 
     <footer>
